--- a/Website/m1test_manager_empSignUpCheck_1.html
+++ b/Website/m1test_manager_empSignUpCheck_1.html
@@ -12,6 +12,11 @@
 				padding: 10px 10px 10px 10px;
 				font-family: sans-serif;
 			}
+			
+			menu li {
+				font-weight: bold;
+			}
+			
 		</style>
 	</head>
 	
@@ -22,10 +27,12 @@
 	<h2>BEFORE YOU CONTINUE...</h2>
 		<p>You cannot create an employee without having the following information:</p>
 		</br>
-		<p>-Employee Name</p>
-		<p>-Valid Employee Email Address</p>
-		<p>-Employee Phone Number ----- do we need this? check with app team</p>
-		<p>-Employee Password<b><i>    *either assigned by you or chosen by the employee</i></b></p>
+		<menu>
+			<li>-Employee Name</li></br>
+			<li>-Valid Employee Email Address</li></br>
+			<li>-Employee Phone Number ----- do we need this? check with app team</li></br>
+			<li>-Employee Password<b><i>    *either assigned by you or chosen by the employee</i></b></li>
+		</menu>
 		</br>
 		<p>
 		<a href="m1test_makeNewEmployee_1.html"
