--- a/Website/m1test_makeNewEmployee_1.html
+++ b/Website/m1test_makeNewEmployee_1.html
@@ -62,6 +62,12 @@
 			</div> 
 		</h4>
 		
+		<h5>Store ID
+			<div class="form-group">
+				<input type="text" class="form-control" id = "StoreID" placeholder="Enter Store ID #">
+			</div> 
+		</h5>
+		
 	</form>
 	
 	<p>
